--- a/Store.Web/Views/Cart/Index.cshtml
+++ b/Store.Web/Views/Cart/Index.cshtml
@@ -1,7 +1,48 @@
-﻿
+﻿@model Store.Web.Models.CardViewModel
+
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<div class="well well-sm"><h3>Shopping Cart</h3></div>
+
+<div class="container">
+    <table id="cart" class="table table-hover table-condensed">
+        <thead>
+            <tr>
+                <th style="width:85%">Product</th>
+                <th style="width:15%">Price</th>
+            </tr>
+        </thead>
+        <tbody>
+        @foreach (var product in Model.Products)
+        {
+            <tr>
+                <td data-th="Product">
+                    <div class="row">
+                        <div class="col-sm-2 hidden-xs"><img src="@product.ImageUrl" alt="@product.Name" class="img-responsive"/>
+                        </div>
+                        <div class="col-sm-10">
+                            <h4 class="nomargin">@product.Name</h4>
+                            <p>@product.Specification</p>
+                        </div>
+                    </div>
+                </td>
+                <td data-th="Price">$@product.Price</td>
+            </tr>
+        }
+        </tbody>
+        <tfoot>
+            <tr class="visible-xs">
+                <td class="text-center"><strong>Total $@Model.TotalPrice</strong></td>
+            </tr>
+            <tr>
+                <td><a href="@Url.Action("Index", "Product")" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
+                <td colspan="2" class="hidden-xs"></td>
+                <td class="hidden-xs text-center"><strong>Total $@Model.TotalPrice</strong></td>
+                <td><a href="@Url.Action("Purchase", "Product")" class="btn btn-success btn-block">Purchase<i class="fa fa-angle-right"></i></a></td>
+            </tr>
+        </tfoot>
+    </table>
+</div>
 
