--- a/Store.Web/Views/Home/Index.cshtml
+++ b/Store.Web/Views/Home/Index.cshtml
@@ -1,151 +1,81 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div id="products" class="row list-group">
-    <div class="item  col-xs-4 col-lg-4">
-        <div class="thumbnail">
-            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
-            <div class="caption">
-                <h4 class="group inner list-group-item-heading">
-                    Product title
-                </h4>
-                <p class="group inner list-group-item-text">
-                    Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                </p>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead">
-                            $21.000
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
-                    </div>
+﻿<div id="myCarousel" class="carousel slide">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+        <div class="item active">
+            <img src="@Url.Content("~/Content/Images/oferta1.png")" style="width:100%" class="img-responsive">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>Oferta 1 de nerefuzat</h1>
+                    <p></p>
+                    <p>
+                        <a class="btn btn-lg btn-primary" href="@Url.Action("Index","Product")">Show me</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="@Url.Content("~/Content/Images/oferta2.png")" class="img-responsive">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>Oferta 2 este de nerefuzat</h1>
+                    <p>Oferta oferta care este mega super gica oferta.</p>
+                    <p><a class="btn btn-large btn-primary" href="@Url.Action("Index","Product")">Show me</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="item">
+            <img src="@Url.Content("~/Content/Images/oferta3.png")" class="img-responsive">
+            <div class="container">
+                <div class="carousel-caption">
+                    <h1>Da ce oferta avem noi aicea?</h1>
+                    <p>Oferta oferta care este giga oferta.</p>
+                    <p><a class="btn btn-large btn-primary" href="@Url.Action("Index","Product")" >View</a></p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="item  col-xs-4 col-lg-4">
-        <div class="thumbnail">
-            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
-            <div class="caption">
-                <h4 class="group inner list-group-item-heading">
-                    Product title
-                </h4>
-                <p class="group inner list-group-item-text">
-                    Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                </p>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead">
-                            $21.000
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="item  col-xs-4 col-lg-4">
-        <div class="thumbnail">
-            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
-            <div class="caption">
-                <h4 class="group inner list-group-item-heading">
-                    Product title
-                </h4>
-                <p class="group inner list-group-item-text">
-                    Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                </p>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead">
-                            $21.000
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="item  col-xs-4 col-lg-4">
-        <div class="thumbnail">
-            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
-            <div class="caption">
-                <h4 class="group inner list-group-item-heading">
-                    Product title
-                </h4>
-                <p class="group inner list-group-item-text">
-                    Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                </p>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead">
-                            $21.000
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="item  col-xs-4 col-lg-4">
-        <div class="thumbnail">
-            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
-            <div class="caption">
-                <h4 class="group inner list-group-item-heading">
-                    Product title
-                </h4>
-                <p class="group inner list-group-item-text">
-                    Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                </p>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead">
-                            $21.000
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="item  col-xs-4 col-lg-4">
-        <div class="thumbnail">
-            <img class="group list-group-image" src="http://placehold.it/400x250/000/fff" alt="" />
-            <div class="caption">
-                <h4 class="group inner list-group-item-heading">
-                    Product title
-                </h4>
-                <p class="group inner list-group-item-text">
-                    Product description... Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
-                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-                </p>
-                <div class="row">
-                    <div class="col-xs-12 col-md-6">
-                        <p class="lead">
-                            $21.000
-                        </p>
-                    </div>
-                    <div class="col-xs-12 col-md-6">
-                        <a class="btn btn-success" href="http://www.jquery2dotnet.com">Add to cart</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+        <span class="icon-prev"></span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+        <span class="icon-next"></span>
+    </a>
 </div>
-</div>
+<!-- /.carousel -->
+<!-- Marketing messaging and featurettes
+================================================== -->
+<!-- Wrap the rest of the page in another container to center all the content. -->
+<div class="container marketing">
+    <!-- Three columns of text below the carousel -->
+    <div class="row">
+        <div class="col-md-4 text-center">
+            <img class="img-circle" src="http://placehold.it/140x140">
+            <h2>Mobile-first</h2>
+            <p>Tablets, phones, laptops. The new 3 promises to be mobile friendly from the start.</p>
+            <p><a class="btn btn-default" href="#">View details »</a></p>
+        </div>
+        <div class="col-md-4 text-center">
+            <img class="img-circle" src="http://placehold.it/140x140">
+            <h2>One Fluid Grid</h2>
+            <p>There is now just one percentage-based grid for Bootstrap 3. Customize for fixed widths.</p>
+            <p><a class="btn btn-default" href="#">View details »</a></p>
+        </div>
+        <div class="col-md-4 text-center">
+            <img class="img-circle" src="http://placehold.it/140x140">
+            <h2>LESS is More</h2>
+            <p>Improved support for mixins make the new Bootstrap 3 easier to customize.</p>
+            <p><a class="btn btn-default" href="#">View details »</a></p>
+        </div>
+    </div><!-- /.row -->
+    <!-- FOOTER -->
+    <footer>
+        <p class="pull-right"><a href="#">Back to top</a></p>
+        <p>This Bootstrap layout is compliments of Bootply. · <a href="http://www.bootply.com/62603">Edit on Bootply.com</a></p>
+    </footer>
+</div><!-- /.container -->
