Addded sugestions , orders and other things

--- a/Store.Web/Views/Cart/Index.cshtml
+++ b/Store.Web/Views/Cart/Index.cshtml
@@ -10,8 +10,9 @@
     <table id="cart" class="table table-hover table-condensed">
         <thead>
             <tr>
-                <th style="width:85%">Product</th>
-                <th style="width:15%">Price</th>
+                <th style="width:90%">Product</th>
+                <th style="width:5%"></th>
+                <th style="width:5%">Price</th>
             </tr>
         </thead>
         <tbody>
@@ -28,6 +29,7 @@
                         </div>
                     </div>
                 </td>
+                <td></td>
                 <td data-th="Price">$@product.Price</td>
             </tr>
         }
@@ -38,8 +40,7 @@
             </tr>
             <tr>
                 <td><a href="@Url.Action("Index", "Product")" class="btn btn-warning"><i class="fa fa-angle-left"></i> Continue Shopping</a></td>
-                <td colspan="2" class="hidden-xs"></td>
-                <td class="hidden-xs text-center"><strong>Total $@Model.TotalPrice</strong></td>
+                <td class="hidden-xs "><strong>Total $@Model.TotalPrice</strong></td>
                 <td><a href="@Url.Action("Purchase", "Product")" class="btn btn-success btn-block">Purchase<i class="fa fa-angle-right"></i></a></td>
             </tr>
         </tfoot>
