--- a/Store.Web/Views/Shared/_Layout.cshtml
+++ b/Store.Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,9 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
+    @{ var baseUrl = Request.Url?.AbsoluteUri.Replace(Request.Url.PathAndQuery,
+                 string.Empty) + Url.Action("Index", "Home"); }
+    <input type="hidden" id="baseUrl" value="@baseUrl" />
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
@@ -20,20 +23,22 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Products", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Products", "Index", "Product")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <form class="navbar-form" style="display: inline-table;" role="search">
+                        <form action="@Url.Action("Search", "Product")" method="post" class="navbar-form" style="display: inline-table;" role="search">
                             <div class="input-group">
-                                <input type="text" class="form-control pull-right" style="width: 200px; margin-right: 35px, border: 1px solid black; background-color: #e5e5e5;" placeholder="Search">
+                                <input type="text" id="search-product" class="form-control pull-right" name="Name" style="width: 200px; margin-right: 35px, border:1px solid black; background-color: #e5e5e5;" placeholder="Search" autocomplete="off">
                                 <span class="input-group-btn">
                                     <button type="reset" class="btn btn-default">
-                                        <span class="glyphicon glyphicon-remove">
-                                            <span class="sr-only">Close</span>
-                                        </span>
+                                        <a href="@Url.Action("Index", "Product")">
+                                            <span class="glyphicon glyphicon-remove">
+                                                <span class="sr-only">Close</span>
+                                            </span>
+                                        </a>
                                     </button>
                                     <button type="submit" class="btn btn-default">
                                         <span class="glyphicon glyphicon-search">
@@ -41,6 +46,10 @@
                                         </span>
                                     </button>
                                 </span>
+                            </div>
+                            <div style="display: none" id="product-search-suggestions" class="suggetions">
+                                <ul id="product-search-suggestions-content" class="list-group">
+                                </ul>
                             </div>
                         </form>
                     </li>
@@ -56,8 +65,8 @@
                                 @if (User.Identity.Name != "admin@store.com")
                                 {
                                     <li><a href="@Url.Action("Edit", "Account", new {@email = User.Identity.Name})"><span class="glyphicon glyphicon-edit"></span> Edit Account</a></li>
-                                    <li><a href="@Url.Action("Index","Cart")"><span class="glyphicon glyphicon-shopping-cart"></span> View Shopping Cart</a></li>
-                                    <li><a href="#"><span class="glyphicon glyphicon-folder-close"></span> View Orders</a></li>
+                                    <li><a href="@Url.Action("Index", "Cart")"><span class="glyphicon glyphicon-shopping-cart"></span> View Shopping Cart</a></li>
+                                    <li><a href="@Url.Action("Index", "Order")"><span class="glyphicon glyphicon-folder-close"></span> View Orders</a></li>
                                 }
                                 else
                                 {
@@ -87,5 +96,6 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script type="text/javascript" src="@Url.Content("~/Scripts/site.js")"></script>
 </body>
 </html>
